HETS-263 - fix model issues
