# Server/src/HETSAPI/Models/RentalRequest.cs
@@ -54,9 +54,9 @@ namespace HETSAPI.Models
         /// <param name="Notes">Notes.</param>
         /// <param name="Attachments">Attachments.</param>
         /// <param name="History">History.</param>
-        /// <param name="RentalRequestAttachment">RentalRequestAttachment.</param>
+        /// <param name="RentalRequestAttachments">RentalRequestAttachments.</param>
         /// <param name="RentalRequestRotationList">RentalRequestRotationList.</param>
-        public RentalRequest(int Id, Project Project, LocalArea LocalArea, string Status, DistrictEquipmentType DistrictEquipmentType, int EquipmentCount, int? ExpectedHours = null, DateTime? ExpectedStartDate = null, DateTime? ExpectedEndDate = null, Equipment FirstOnRotationList = null, List<Note> Notes = null, List<Attachment> Attachments = null, List<History> History = null, List<RentalRequestAttachment> RentalRequestAttachment = null, List<RentalRequestRotationList> RentalRequestRotationList = null)
+        public RentalRequest(int Id, Project Project, LocalArea LocalArea, string Status, DistrictEquipmentType DistrictEquipmentType, int EquipmentCount, int? ExpectedHours = null, DateTime? ExpectedStartDate = null, DateTime? ExpectedEndDate = null, Equipment FirstOnRotationList = null, List<Note> Notes = null, List<Attachment> Attachments = null, List<History> History = null, List<RentalRequestAttachment> RentalRequestAttachments = null, List<RentalRequestRotationList> RentalRequestRotationList = null)
         {   
             this.Id = Id;
             this.Project = Project;
@@ -76,7 +76,7 @@ namespace HETSAPI.Models
             this.Notes = Notes;
             this.Attachments = Attachments;
             this.History = History;
-            this.RentalRequestAttachment = RentalRequestAttachment;
+            this.RentalRequestAttachments = RentalRequestAttachments;
             this.RentalRequestRotationList = RentalRequestRotationList;
         }
 
@@ -198,9 +198,9 @@ namespace HETSAPI.Models
         public List<History> History { get; set; }
         
         /// <summary>
-        /// Gets or Sets RentalRequestAttachment
+        /// Gets or Sets RentalRequestAttachments
         /// </summary>
-        public List<RentalRequestAttachment> RentalRequestAttachment { get; set; }
+        public List<RentalRequestAttachment> RentalRequestAttachments { get; set; }
         
         /// <summary>
         /// Gets or Sets RentalRequestRotationList
@@ -228,7 +228,7 @@ namespace HETSAPI.Models
             sb.Append("  Notes: ").Append(Notes).Append("\n");
             sb.Append("  Attachments: ").Append(Attachments).Append("\n");
             sb.Append("  History: ").Append(History).Append("\n");
-            sb.Append("  RentalRequestAttachment: ").Append(RentalRequestAttachment).Append("\n");
+            sb.Append("  RentalRequestAttachments: ").Append(RentalRequestAttachments).Append("\n");
             sb.Append("  RentalRequestRotationList: ").Append(RentalRequestRotationList).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
@@ -332,9 +332,9 @@ namespace HETSAPI.Models
                     this.History.SequenceEqual(other.History)
                 ) && 
                 (
-                    this.RentalRequestAttachment == other.RentalRequestAttachment ||
-                    this.RentalRequestAttachment != null &&
-                    this.RentalRequestAttachment.SequenceEqual(other.RentalRequestAttachment)
+                    this.RentalRequestAttachments == other.RentalRequestAttachments ||
+                    this.RentalRequestAttachments != null &&
+                    this.RentalRequestAttachments.SequenceEqual(other.RentalRequestAttachments)
                 ) && 
                 (
                     this.RentalRequestRotationList == other.RentalRequestRotationList ||
@@ -401,9 +401,9 @@ namespace HETSAPI.Models
                 {
                     hash = hash * 59 + this.History.GetHashCode();
                 }                   
-                if (this.RentalRequestAttachment != null)
+                if (this.RentalRequestAttachments != null)
                 {
-                    hash = hash * 59 + this.RentalRequestAttachment.GetHashCode();
+                    hash = hash * 59 + this.RentalRequestAttachments.GetHashCode();
                 }                   
                 if (this.RentalRequestRotationList != null)
                 {
